@@ -1,3 +1,15 @@
+2011-08-28  Balazs Kelemen  <kbalazs@webkit.org>
+
+        [Qt][WK2] Unreviewed build fix.
+
+        * UIProcess/qt/QtWebPageProxy.cpp:
+        (QtWebPageProxy::init): Initialize the WKPageUIClient with memset
+        to avoid missing initializer warning. The missing initializer is the
+        result of using a version 0 WKPageUIClient while it has newer version (1).
+        We have nothing to do with the callbacks in the new version so I voted
+        for memset.
+        * WebProcess/WebCoreSupport/qt/WebErrorsQt.cpp: Include ResourceError.h.
+
 2011-08-26  Sam Weinig  <sam@webkit.org>
 
         Stop using custom NSErrors for WebKit2 WebErrors
